# engine

./: .gitignore  .gitmodules  README.md  TODO.md  imgui.ini  meson.build  meson_options.txt
common/: README.md  meson.build
common/include/engine/assets/: assets.h
common/include/engine/base/: logging.h  macros.h  memory.h  mutex.h  panic.h  util.h  win32.h
common/include/engine/container/: resource.h  unique.h
common/include/engine/graph/: bind.h  graph.h  pass.h  render.h  resource.h
common/include/engine/input/: input.h  input.inl
common/include/engine/locale/: locale.h
common/include/engine/math/: math.h
common/include/engine/memory/: bitmap.h  pool.h  slotmap.h
common/include/engine/render/: camera.h  data.h  graph.h  queue.h  render.h  scene.h  world.h
common/include/engine/render-new/: graph.h  queue.h  render.h  scene.h
common/include/engine/rhi/: rhi.h
common/include/engine/window/: window.h
common/src/assets/: gltf.cpp
common/src/audio/: audio.cpp
common/src/base/: io.cpp  logging.cpp  mutex.cpp  panic.cpp  util.cpp  win32.cpp
common/src/base/input/: gamepad.cpp
common/src/base/io/: io.cpp
common/src/base/locale/: locale.cpp
common/src/graph/: pass.cpp  render.cpp  resource.cpp
common/src/input/: desktop.cpp  gamepad.cpp  input.cpp
common/src/locale/: locale.cpp
common/src/memory/: bitmap.cpp
common/src/render/: async.cpp  camera.cpp  graph.cpp  queue.cpp  render.cpp  scene.cpp  world.cpp
common/src/render-new/: async.cpp  graph.cpp  queue.cpp  render.cpp  scene.cpp
common/src/render/assets/: assets.cpp
common/src/render/passes/: imgui.cpp  present.cpp
common/src/render/resources/: resources.cpp
common/src/rhi/: rhi.cpp
common/src/rhi/objects/: buffer.cpp  commands.cpp  common.h  device.cpp  fence.cpp  pipeline.cpp  queue.cpp  swapchain.cpp
common/src/ui/: ui.cpp
common/src/window/: window.cpp
data/: MicrosoftGame.Config  meson.build
data/shaders/: cubemap.hlsl  perlin.hlsl  post.hlsl  scene.hlsl
data/tools/: hlsl.py
editor/: main.cpp  meson.build
editor/include/editor/shaders/: shaders.h
editor/include/editor/widgets/: file-dialog.h  nodes-ez.h
editor/src/shaders/: shaders.cpp
editor/src/widgets/: nodes-ez.cpp  nodes.cpp
engine/: meson.build
engine/include/engine/base/: async.h  io.h  logging.h  macros.h  panic.h  util.h  win32.h  window.h
engine/include/engine/input/: input.h
engine/include/engine/logging/: logging.h
engine/include/engine/math/: consts.h  math.h
engine/include/engine/platform/: platform.h
engine/include/engine/render/: camera.h  data.h  render.h  scene.h  util.h  window.h  world.h
engine/include/engine/rhi/: rhi.h
engine/include/engine/ui/: ui.h
engine/include/engine/window/: window.h
engine/include/simcoe/assets/: assets.h
engine/include/simcoe/core/: logging.h  panic.h  progress.h  system.h  util.h
engine/include/simcoe/input/: gamepad.h  input.inc
engine/include/simcoe/math/: consts.h  math.h
engine/include/simcoe/memory/: bitmap.h
engine/include/simcoe/render/: context.h  heap.h  render.h
engine/include/simcoe/rhi/: rhi.h
engine/include/simcoe/vfs/: assets.h
engine/src/assets/: gltf.cpp
engine/src/base/: io.cpp  logging.cpp  panic.cpp  util.cpp  win32.cpp  window.cpp
engine/src/core/: io.cpp  logging.cpp  panic.cpp  system.cpp  units.cpp
engine/src/input/: desktop.cpp  gamepad.cpp  input.cpp
engine/src/logging/: logging.cpp
engine/src/memory/: bitmap.cpp
engine/src/platform/: windows.cpp
engine/src/render/: README.md  camera.cpp  context.cpp  err.md  heap.cpp  render.cpp  scene.cpp  window.cpp  world.cpp
engine/src/rhi/: common.cpp  common.h  rhi.cpp  vendor.cpp
engine/src/rhi-d3d12/: api.cpp
engine/src/rhi/d3d12/: agility.cpp  render.cpp  rhi.cpp
engine/src/rhi/dx/: common.h  rhi.cpp
engine/src/rhi/objects/: allocator.cpp  allocator.h  buffer.cpp  buffer.h  commands.cpp  commands.h  common.cpp  common.h  descriptors.cpp  descriptors.h  device.cpp  device.h  fence.cpp  fence.h  pipeline.cpp  pipeline.h  queue.cpp  queue.h  swapchain.cpp  swapchain.h
engine/src/ui/: ui.cpp
engine/src/window/: window.cpp
game/: main.cpp  meson.build
game/game/: gdk.cpp  gdk.h
game/include/game/: camera.h  events.h  game.h  gdk.h  registry.h  render.h  window.h
game/include/imgui/backends/: imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_win32.h
game/include/widgets/: imfilebrowser.h
game/src/: game.cpp  gdk.cpp  render.cpp  window.cpp
game/src/game/: camera.cpp  events.cpp  gdk.cpp  registry.cpp  render.cpp
game/src/game/render/: blit.cpp  cubemap.cpp  global.cpp  imgui.cpp  model.cpp  scene.cpp
game/src/render/: blit.cpp  imgui.cpp  scene.cpp
render-old5/render/: meson.build
simcoe/: meson.build
simcoe/include/imgui/: imconfig.h
simcoe/include/imnodes/: meson.build
simcoe/include/simcoe/: simcoe.h
simcoe/include/simcoe/assets/: assets.h
simcoe/include/simcoe/async/: generator.h
simcoe/include/simcoe/audio/: audio.h
simcoe/include/simcoe/core/: async.h  logging.h  logging.inc  macros.h  panic.h  system.h  units.h  util.h  win32.h  (+1 more)
simcoe/src/assets/: gltf.cpp
simcoe/src/audio/: audio.cpp
simcoe/src/core/: logging.cpp  panic.cpp  simcoe.cpp  system.cpp  util.cpp  window.cpp
simcoe/src/input/: common.h  desktop.cpp  gamepad.cpp  input.cpp  raw.cpp
simcoe/src/locale/: locale.cpp
simcoe/src/render/: context.cpp  graph.cpp  heap.cpp  queue.cpp
subprojects/fastgltf/: meson.build
subprojects/fastgltf/fastgltf/: base64_decode.cpp  fastgltf_util.hpp
subprojects/fastgltf/src/: fastgltf.cpp
subprojects/fmt/: meson.build
subprojects/glfw/: meson.build
subprojects/gltf/: meson.build
subprojects/imgui/: meson.build
subprojects/imgui-widgets/: imgui-file-dialog-config.h  imgui-file-dialog.cpp  imgui-file-dialog.h  meson.build
subprojects/imgui/imgui/: imgui.cpp  imgui_widgets.cpp
subprojects/ndk/: meson.build
subprojects/simdjson/: meson.build
subprojects/simdjson/simdjson/: simdjson.h
subprojects/tinygltf/: meson.build
subprojects/tinygltf/tinygltf/: tinygltf.h
(+375 files in other folders)
