option('agility-sdk',
    description : 'enable use of the agility sdk',
    type : 'feature',
    value : 'enabled'
)

option('dlss-sdk',
    description : 'enable use of the dlss sdk',
    type : 'feature',
    value : 'disabled'
)

option('debug-d3d12',
    description : 'enable d3d12 debugging',
    type : 'feature',
    value : 'enabled'
)
