src += files(
    'src/render/util.cpp',

    'src/render/context/context.cpp',
    'src/render/context/lifetime.cpp',
    'src/render/context/access.cpp',
    'src/render/context/sync.cpp',

    'src/render/debug.cpp',

    # d3d wrapper objects
    'd3d12/factory.cpp',
    'd3d12/device.cpp',
    'd3d12/library.cpp',
    'd3d12/heap.cpp',
    'd3d12/resource.cpp',
)
